--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="eamv.dmu17he.lan_crew_app">
+    package="eamv.dmu17he.lancrewappprototype">
 
     <application
         android:allowBackup="true"
@@ -9,13 +9,19 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".activities.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        
+        <activity android:name=".activities.RegisterActivity"
+            android:screenOrientation="portrait" />
+        
+        <activity android:name=".activities.UsersActivity"
+            android:screenOrientation="portrait" />
     </application>
 
 </manifest>
