--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,9 @@
         
         <activity android:name="eamv.dmu17he.lancrewapp.activities.UsersActivity"
             android:screenOrientation="portrait" />
+
+        <activity android:name=".activities.MenuActivity"
+            android:screenOrientation="portrait" />
     </application>
 
 </manifest>
