--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,7 +28,7 @@
         <activity android:name=".activities.BookingOverview" />
         <activity android:name=".activities.CreateHall" />
         <activity android:name=".activities.EditHall" />
-        <activity android:name=".activities.Bookings"></activity>
+        <activity android:name=".activities.PickSpace"></activity>
     </application>
 
 </manifest>
