--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,9 +19,14 @@
         
         <activity android:name="eamv.dmu17he.lancrewapp.activities.RegisterActivity"
             android:screenOrientation="portrait" />
-        
-        <activity android:name="eamv.dmu17he.lancrewapp.activities.UsersActivity"
+
+        <activity android:name=".activities.MenuActivity"
             android:screenOrientation="portrait" />
+        <activity android:name=".activities.ScheduleActivity"
+            android:screenOrientation="portrait" />
+        <activity android:name=".activities.ContactsActivity"
+            android:screenOrientation="portrait" />
+
     </application>
 
 </manifest>
