--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 26
     defaultConfig {
-        applicationId "eamv.dmu17he.lan_crew_app"
+        applicationId "eamv.dmu17he.lancrewapp"
         minSdkVersion 21
         targetSdkVersion 26
         versionCode 1
