--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="eamv.dmu17he.lancrewapp.activities.LoginActivity">
+        <activity android:name="eamv.dmu17he.lancrewapp.activities.MenuActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -20,8 +20,6 @@
         <activity android:name="eamv.dmu17he.lancrewapp.activities.RegisterActivity"
             android:screenOrientation="portrait" />
 
-        <activity android:name=".activities.MenuActivity"
-            android:screenOrientation="portrait" />
         <activity android:name=".activities.ScheduleActivity"
             android:screenOrientation="portrait" />
         <activity android:name=".activities.ContactsActivity"
