--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,7 +25,11 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
-    compile 'com.android.support:design:26.1.0'
-    compile 'android.arch.persistence.room:runtime:1.0.0'
+    implementation 'com.android.support:design:26.1.0'
+    implementation 'android.arch.persistence.room:runtime:1.0.0'
     annotationProcessor 'android.arch.persistence.room:compiler:1.0.0'
+    implementation 'com.microsoft.azure:azure-mobile-android:3.2.0@aar'
+    implementation 'com.google.guava:guava:18.0'
+    implementation 'com.google.code.gson:gson:2.3'
+    implementation 'com.squareup.okhttp:okhttp:2.5.0'
 }
