--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="eamv.dmu17he.lancrewapp">
+
     <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -35,7 +37,8 @@
         <activity android:name=".activities.DeleteHallActivity" />
         <activity android:name=".activities.ChooseEditOrDeleteActivity" />
         <activity android:name=".activities.WakeUpDetailsActivity" />
-        <activity android:name=".activities.BookingsListOverviewActivity"></activity>
+        <activity android:name=".activities.BookingsListOverviewActivity" />
+        <activity android:name=".activities.DeleteWakeUpActivity"></activity>
     </application>
 
 </manifest>
