--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="eamv.dmu17he.lancrewapp">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,7 +11,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="eamv.dmu17he.lancrewapp.activities.LoginActivity">
+        <activity android:name="eamv.dmu17he.lancrewapp.activities.CrewMessageActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
