--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,15 +30,12 @@
         <activity android:name=".activities.WakeUpActivity" />
         <activity android:name=".activities.AdministrateActivity" />
         <activity android:name=".activities.BookAWakeUpActivity" />
-        <activity android:name=".activities.BookingOverviewActivityty" />
+        <activity android:name=".activities.BookingsListOverviewActivity" />
         <activity android:name=".activities.CreateHallActivity" />
         <activity android:name=".activities.EditOrDeleteHallActivity" />
         <activity android:name=".activities.PickSpaceActivity" />
-        <activity android:name=".activities.DeleteHallActivity" />
-        <activity android:name=".activities.ChooseEditOrDeleteActivity" />
+        <activity android:name=".activities.DeleteWakeUpActivity" />
         <activity android:name=".activities.WakeUpDetailsActivity" />
-        <activity android:name=".activities.BookingsListOverviewActivity" />
-        <activity android:name=".activities.DeleteWakeUpActivity"></activity>
             android:name=".activities.ScheduleActivity"
             android:screenOrientation="portrait" />
         <activity
@@ -50,9 +47,9 @@
         <activity
             android:name=".activities.CreateScheduleActivity"
             android:screenOrientation="portrait" />
-        <activity
-            android:name=".activities.MenuActivity"
-            android:screenOrientation="portrait" />
-    </application>
+
+
+
+</application>
 
 </manifest>
